--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,12 @@
   ],
   "dependencies": {
     "angular": "^1.5.6",
-    "jquery": "^3.0.0"
+    "jquery": "^3.0.0",
+    "angular-route": "^1.5.6"
+    "bootstrap": "^3.3.6",
+    "angular-ui-router": "^0.3.1"
+  },
+  "devDependencies": {
+
   }
 }
