--- a/package.json
+++ b/package.json
@@ -12,6 +12,24 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "mysql": "^2.11.1",
+    "sequelize": "^3.23.3",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "assert": "^1.4.1",
+    "fs": "0.0.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "gulp-webserver": "^0.9.1",
+    "karma": "^0.13.22",
+    "karma-mocha": "^1.0.1",
+    "mocha": "^2.5.3"
   }
 }
