--- a/bower.json
+++ b/bower.json
@@ -17,11 +17,10 @@
   "dependencies": {
     "angular": "^1.5.6",
     "jquery": "^3.0.0",
-    "angular-route": "^1.5.6"
+    "angular-route": "^1.5.6",
     "bootstrap": "^3.3.6",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-resource": "^1.5.7"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
