--- a/package.json
+++ b/package.json
@@ -18,18 +18,27 @@
   },
   "devDependencies": {
     "assert": "^1.4.1",
+    "del": "^2.2.0",
     "fs": "0.0.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-mocha": "^2.2.0",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-nodemon": "^2.1.0",
+    "gulp-rev": "^7.1.0",
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
+    "gulp-usemin": "^0.3.23",
     "gulp-webserver": "^0.9.1",
-    "karma": "^0.13.22",
-    "karma-mocha": "^1.0.1",
-    "mocha": "^2.5.3"
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
+    "mocha": "^2.5.3",
+    "rev": "0.0.1",
+    "should": "^9.0.2",
+    "supertest": "^1.2.0"
   }
 }
